force-app/main/default/objects/Media_Item_Role__c/Media_Item_Role__c.object-meta.xml
<CustomObject>
    <description>The role played by a person in creating or publishing a Media Item.</description>
    <label>Media Item Role</label>
    <nameField>
        <displayFormat>MIR-{00000}</displayFormat>
        <label>Media Item Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Item Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>