force-app/main/default/objects/Media_Item_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The person involved in this Media Item.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Media Item Roles</relationshipLabel>
    <relationshipName>Media_Item_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>