force-app/main/default/objects/Media_Item_Role__c/fields/Media_Item__c.field-meta.xml
<CustomField>
    <fullName>Media_Item__c</fullName>
    <inlineHelpText>The Media Item in which this Contact is involved.</inlineHelpText>
    <label>Media Item</label>
    <referenceTo>Media_Item__c</referenceTo>
    <relationshipLabel>Media Item Roles</relationshipLabel>
    <relationshipName>Media_Item_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>