force-app/main/default/objects/Media_Item_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>The role this Contact played in creating or publishing this Media Item.</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Media_Item_Role</valueSetName>
    </valueSet>
</CustomField>